--- a/HTML & CSS/HTML Structure/05_SimpleWebsite/simple-website.html
+++ b/HTML & CSS/HTML Structure/05_SimpleWebsite/simple-website.html
@@ -23,14 +23,14 @@
         <article>
             <header>
                 <h1>Just Another Day</h1>
-                <p class="italic">Written by Christina on January 11th</p>
+                <p>Written by Christina on January 11th</p>
             </header>
             <p class="size">This is my second blog entry, and I just wanted to check in on you.</p>
         </article>
         <article>
             <header>
                 <h1>My First Blog Entry</h1>
-                <p class="italic">Written by Christina on January 10th</p>
+                <p>Written by Christina on January 10th</p>
             </header>
             <p class="size">I’m so happy to write my first blog entry – yay!</p>
         </article>
