--- a/Blockbuster-film-review/index.html
+++ b/Blockbuster-film-review/index.html
@@ -333,7 +333,53 @@
   <!-- Footer Start -->
 
   <footer class="home-footer">
-
+    <div class="container">
+      <div class="contact-data-container">
+        <img src="./imges/home/logo1.png" alt="blockbuster-logo">
+        <p class="contact-data__address-one">72 Mur str.</p>
+        <p class="contact-data__address-two">Sofia 1404</p>
+        <p class="contact-data__phone">Contact us: <a href="#">(+359) 882 037 375</a></p>
+      </div>
+      <div class="links-container">
+        <h2 class="links__title">Resources</h2>
+        <ul role="list" class="links-list">
+          <li class="links-list__item"><a href="#">About</a></li>
+          <li class="links-list__item"><a href="#">Blockbuster</a></li>
+          <li class="links-list__item"><a href="#">Contact Us</a></li>
+          <li class="links-list__item"><a href="#">Forums</a></li>
+          <li class="links-list__item"><a href="#">Blog</a></li>
+          <li class="links-list__item"><a href="#">Help Center</a></li>
+        </ul>
+      </div>
+      <div class="links-container">
+        <h2 class="links__title">Leagal</h2>
+        <ul role="list" class="links-list">
+          <li class="links-list__item"><a href="#">Terms of Use</a></li>
+          <li class="links-list__item"><a href="#">Privacy Policy</a></li>
+          <li class="links-list__item"><a href="#">Security</a></li>
+        </ul>
+      </div>
+      <div class="links-container">
+        <h2 class="links__title">Account</h2>
+        <ul role="list" class="links-list">
+          <li class="links-list__item"><a href="#">My Account</a></li>
+          <li class="links-list__item"><a href="#">Watchlist</a></li>
+          <li class="links-list__item"><a href="#">Collections</a></li>
+          <li class="links-list__item"><a href="#">User Guide</a></li>
+        </ul>
+      </div>
+      <div class="links-container newsletter">
+        <h2 class="links__title">Newsletter</h2>
+        <p class="newsletter__text">Subscribe to our newsletter system now
+          to get latest news from us.</p>
+        <div class="inputcontainer">
+          <input type="email" placeholder="Enter your email...">
+          <a href="#"><i class="fa-regular fa-envelope"></i></a>
+        </div>
+        <a href="#" class="subscribe-btn">SUBSCRIBE NOW</a>
+      </div>
+    </div>
+    <p class="copyrigths">&copy; 2017 Blockbuster. All Rights Reserved. Designed by leehari</p>
   </footer>
 
   <!-- Footer End -->
