--- a/Blockbuster-film-review/index.html
+++ b/Blockbuster-film-review/index.html
@@ -372,7 +372,7 @@
         <h2 class="links__title">Newsletter</h2>
         <p class="newsletter__text">Subscribe to our newsletter system now
           to get latest news from us.</p>
-        <div class="inputcontainer">
+        <div class="input-container">
           <input type="email" placeholder="Enter your email...">
           <a href="#"><i class="fa-regular fa-envelope"></i></a>
         </div>
